# -----------------------------------------------------------------------------
# Adding test files
# -----------------------------------------------------------------------------

add_subdirectory(base_2d)
add_subdirectory(base_3d)
add_subdirectory(silo)

# -----------------------------------------------------------------------------
